# TS-Forecasting

./: .gitignore  pyproject.toml
anomaly_detection/: __init__.py  anomaly_detector_base.py  base.py  data_loading.py  fit_detector.py  moving_std_ad.py
literature/: anomaly_detector_base.py  eval.py
literature/AnomTrans/: ATWrapper.py  AnomTrans.py  __init__.py
literature/anom_trans/: __init__.py  anom_trans.py  anom_trans_wrapper.py
literature/dagmm/: __init__.py  dagmm.py  dagmm_adopted.py  dagmm_wrapper.py  wrapper.py
literature/tadgan/: __init__.py  tadgan.py  tadgan_wrapper.py
literature/velc/: __init__.py  velc-tf.py  velc.py  velcWrapper.py  velc_wrapper.py
models/: __init__.py  conv_ae.py  lstm_ae.py  lstm_autoencoder.py  lstm_pae.py  lstm_pvae.py  lstm_vae.py
models/ideas/: __init__.py  mvr.py
notebook_utils/: modeling.py  plotting.py  save_load.py  ts_stats.py
notebooks/: AnomTrans_scores_scaled.ipynb  AnomTrans_stats.ipynb  TadGAN_stats.ipynb  VELC_stats.ipynb  a_scores_th_finding.ipynb  compare_detection_results.ipynb  datasets_EDA.ipynb  emb_resid_corr.ipynb  experiments.ipynb  generate_dataset.ipynb  plots_images.ipynb  point_AnomTrans_experiment.ipynb  power_consumption_EDA.ipynb  sin_exp.ipynb  tmp.ipynb  ts-forecasting.ipynb
predpy/: __init__.py
predpy/data_module/: __init__.py  multi_time_series_module.py  time_series_module.py
predpy/dataset/: __init__.py  multi_time_series_dataset.py  single_time_series_dataset.py  (+2 more)
scripts/: AT_finding_th.py  rm_experiments_data.sh  run_experiments.py  test.py  tmp_debug.py
tsad/: __init__.py
(+52 files in other folders)
