[tool.poetry]
name = "tsad"
version = "0.1.0"
description = "\"Time series anomaly detection packages\""
authors = ["Stanisław Straburzyński <sstraburzynski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
pytorch-lightning = "^1.5.10"
pandas = "^1.4.1"
sklearn = "^0.0"
torch = "^1.10.2"
plotly = "^5.6.0"
tqdm = "^4.62.3"
numpy = "^1.22.2"
ipywidgets = "^7.6.5"
statsmodels = "^0.13.2"
matplotlib = "^3.5.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
